--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <!-- Font awesome CDN -->
     <script src="https://kit.fontawesome.com/0ac512d244.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>SZ FOOD</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
